# python-opentelekom-sdk

./: .gitignore  AUTHORS  ChangeLog  README.md  __init__.py  requirements.txt  setup.cfg  tox.ini
opentelekom/: connection.py  exceptions.py  otc_proxy.py  otc_resource.py  setup.cfg  version.py
opentelekom/cce/: cce_service.py
opentelekom/cce/v3/: _proxy.py  cce_resource.py  cluster.py  cluster_cert.py  cluster_node.py
opentelekom/csbs/: csbs_service.py
opentelekom/csbs/v1/: _proxy.py  backup.py  policy.py
opentelekom/css/: css_service.py
opentelekom/css/v1/: _proxy.py  cluster.py  flavor.py
opentelekom/dms/: dms_service.py
opentelekom/dms/v1/: _proxy.py  group.py  queue.py
opentelekom/dms/v1.0/: _proxy.py
opentelekom/dns/: dns_service.py
opentelekom/dns/v2/: _proxy.py  recordset.py  zone.py
opentelekom/kms/: kms_service.py
opentelekom/kms/v1/: _proxy.py  cmk.py  cms.py
opentelekom/nat/: nat_service.py
opentelekom/nat/v2/: _proxy.py  gateway.py  snat.py
opentelekom/rds/: rds_service.py
opentelekom/rds/v3/: _proxy.py  datastore.py  flavor.py  instance.py
opentelekom/tests/functional/: base.py
opentelekom/tests/functional/cce/v3/: fixture_cce.py  test_cce.py
opentelekom/tests/functional/csbs/v1/: fixture_csbs.py  test_csbs.py
opentelekom/tests/functional/css/v1/: fixture_css.py  test_cluster.py  (+1 more)
opentelekom/tests/unit/: otc_mockservice.py  test_datastore.py  test_proxy.py
opentelekom/vpc/: vpc2_service.py  vpc_service.py
opentelekom/vpc/v1/: _proxy.py  subnet.py  vpc.py
opentelekom/vpc/v2/: _proxy.py  peering.py
(+23 files in other folders)
