[metadata]
name = opentelekomsdk
version = 0.8.5
summary = Extension of the OpenStack SDK with serices for Open Telekom Cloud
description-file =
    README.md
author = T-Systems International
author-email = openstack-discuss@lists.openstack.org
home-page = http://developer.openstack.org/sdks/python/openstacksdk/
classifier =
    Environment :: OpenTelekomCloud
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    opentelekom

